# trakaido-wordlists

./: .gitmodules  20th_books.json  LICENSE  MANIFEST.in  README.md  __init__.py  categorychoice.json  find_missing_words.py  pyproject.toml  setup.py  test_wordlists.py  tools.py
jsonl/adjectives/color/: base.jsonl
jsonl/adjectives/definite_quantity/: base.jsonl
jsonl/adjectives/quality/: base.jsonl
jsonl/adjectives/sequence/: base.jsonl
jsonl/adjectives/shape/: base.jsonl
jsonl/adjectives/size/: base.jsonl
jsonl/adverbs/adverb_duration/: base.jsonl
jsonl/adverbs/completeness/: base.jsonl
jsonl/adverbs/degree/: base.jsonl
jsonl/adverbs/direction/: base.jsonl
jsonl/adverbs/intensity/: base.jsonl
jsonl/adverbs/location/: base.jsonl
jsonl/adverbs/other/: base.jsonl
jsonl/adverbs/relative_time/: base.jsonl
jsonl/adverbs/specific_time/: base.jsonl
jsonl/adverbs/style/: base.jsonl
jsonl/articles/article_other/: base.jsonl
jsonl/conjunctions/conjunction_other/: base.jsonl
jsonl/determiner/determiner_other/: base.jsonl
jsonl/nouns/animal/: base.jsonl
lang_de/: README.md
lang_es/: README.md
lang_lt/: __init__.py  level_20_sentences.json  levels.py  nouns.py  nouns_enhanced.py  sentence_generator.py  sentences.py  sentences_integration.py  verbs.py  wordlists.py
lang_lt/audiobatches/: words1.txt  words2.txt  words4.txt  words5.txt  words6.txt  words7.txt  words8.txt  words9.txt
lang_zh/: wordlists.py
lang_zh/hsk/: README.md
trakaido_wordlists/: declensions.py  nouns.py  phrases.py
trakaido_wordlists/audiobatches/: words3.txt
(+45 files in other folders)
